--- a/shop_1/src/main/resources/css/DarkTheme.css
+++ b/shop_1/src/main/resources/css/DarkTheme.css
@@ -1,5 +1,8 @@
+/**
+    BACKGROUND
+ */
 .background {
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #eeebff;
 }
 
 .background .label {
@@ -10,12 +13,17 @@
     -fx-opacity: 1;
     -fx-font-size: 12pt;
 }
+
+.background-lower .image-view {
+    -fx-border-color: #1d1d1d;
+}
+
 .background .choice-box {
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: white;
     -fx-alignment: center-left;
     -fx-opacity: 1;
-    -fx-font-size: 12pt;
+    -fx-font-size: 15pt;
     -fx-mark-color: orange;
 }
 
@@ -23,14 +31,22 @@
     -fx-background-color: white;
 }
 
+.split-pane:horizontal > .split-pane-divider {
+    -fx-background-color: transparent;
+}
+.split-pane:vertical > .split-pane-divider {
+    -fx-background-color: transparent;
+}
+
+/**
+    TABLE
+ */
 .table-view:focused .table-row-cell:filled:focused:selected {
     -fx-background-color: -fx-focus-color;
 }
 
 .table-view {
-    -fx-base: #1d1d1d;
-    -fx-control-inner-background: #1d1d1d;
-    -fx-background-color: #1d1d1d;
+    -fx-background-color: #9bc5d9;
     -fx-table-cell-border-color: transparent;
     -fx-table-header-border-color: transparent;
     -fx-padding: 5;
@@ -40,24 +56,41 @@
     -fx-background-color: transparent;
 }
 
-.table-view .column-header .label {
-    -fx-font-size: 20pt;
-    -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: white;
+.table-view .table-column {
+    -fx-font-family: "serif UI Light";
+    -fx-text-fill: #000000;
+    -fx-font-size: 13pt;
     -fx-alignment: center-left;
     -fx-opacity: 1;
 }
 
-.button {
-    -fx-border-color: #e2e2e2;
-    -fx-border-width: 2;
-    -fx-background-radius: 0;
-    -fx-background-color: #1d1d1d;
-    -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
-    -fx-text-fill: #d8d8d8;
-    -fx-background-insets: 0 0 0 0, 0, 1, 2;
+.table-view .column-header .label {
+    -fx-font-size: 20pt;
+    -fx-font-family: "Segoe UI Light";
+    -fx-text-fill: #000000;
+    -fx-alignment: center-left;
+    -fx-opacity: 1;
+    -fx-font-weight: bold;
 }
 
-.background-lower .image-view {
-    -fx-border-color: #1d1d1d;
+.table-view .column-header {
+    -fx-background-color: #9bc5d9;
 }
+
+.table-view .label {
+    -fx-background-color: #9bc5d9;
+}
+
+.button {
+    -fx-background-color: #333233;
+    -fx-text-fill: #eeebff;
+    -fx-border-color: #333233;
+    -fx-font-weight: bold;
+}
+
+.button:hover {
+    -fx-background-color: #5e5b5e;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.8), 10, 0, 0, 0)
+}
+
+
