--- a/shop_1/src/main/resources/view/ShopOverview.fxml
+++ b/shop_1/src/main/resources/view/ShopOverview.fxml
@@ -2,25 +2,90 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane onKeyPressed="#close" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductOverviewController">
+<AnchorPane onKeyPressed="#close" prefHeight="626.0" prefWidth="998.0" stylesheets="@../css/DarkTheme.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.ProductOverviewController">
     <children>
-        <SplitPane dividerPositions="0.8607784431137725" orientation="VERTICAL" prefHeight="670.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="428.0" prefWidth="998.0">
+      <SplitPane dividerPositions="0.22389558232931728" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <items>
+                <AnchorPane maxWidth="221.0" minHeight="0.0" minWidth="220.0" prefHeight="592.0" prefWidth="171.0" style="-fx-background-color: #333233;" styleClass="background">
                     <children>
-                        <TableView fx:id="productTable" layoutX="399.0" layoutY="157.0" prefHeight="495.2" prefWidth="998.4" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <VBox layoutY="181.0" prefHeight="256.0" prefWidth="220.0" AnchorPane.bottomAnchor="188.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="181.0">
+                     <children>
+                                <Button fx:id="search" accessibleRole="PARENT" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" minWidth="30.0" mnemonicParsing="false" onAction="#handleSearchProduct" prefHeight="40.0" prefWidth="256.0" text="Search">
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../photo/icons8-поиск-32.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                                </Button>
+                                <Button fx:id="add" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" minWidth="30.0" mnemonicParsing="false" onAction="#handleNewProduct" prefHeight="40.0" prefWidth="226.0" text="Add">
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../photo/icons8-плюс-32.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                                </Button>
+                                <Button fx:id="update" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" minWidth="30.0" mnemonicParsing="false" onAction="#handleEditProduct" prefHeight="40.0" prefWidth="225.0" text="Update">
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../photo/icons8-перезапуск-32.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                                </Button>
+                                <Button fx:id="remove" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" minWidth="30.0" mnemonicParsing="false" onAction="#remove" prefHeight="40.0" prefWidth="225.0" text="Delete" textAlignment="CENTER">
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../photo/icons8-удалить-32.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                                </Button>
+                     </children>
+                  </VBox>
+                  <Label layoutX="28.0" layoutY="99.0" style="-fx-background-color: #333233; -fx-underline: true; -fx-alignment: center; -fx-font-family: Arial; -fx-font-size: 14pt;" text="Name of Enterprice">
+                     <font>
+                        <Font name="Georgia Italic" size="12.0" />
+                     </font>
+                  </Label>
+                    </children>
+                </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="456.0" prefWidth="997.0" style="-fx-background-color: #000000;">
+                    <children>
+                        <TableView fx:id="productTable" editable="true" layoutX="-114.0" layoutY="157.0" prefHeight="624.8" prefWidth="770.4" style="-fx-background-color: #8e8f92;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn fx:id="title" minWidth="1.0" prefWidth="204.99998474121094" text="Title" />
-                                <TableColumn fx:id="incomingDate" prefWidth="185.0" text="Incoming date" />
-                                <TableColumn fx:id="serialNumber" prefWidth="305.0" text="Serial number" />
-                                <TableColumn fx:id="count" prefWidth="93.0" text="Count" />
-                                <TableColumn fx:id="condition" prefWidth="306.0" text="Condition" />
+                                <TableColumn fx:id="title" maxWidth="1500.0" minWidth="100.0" prefWidth="300.0" text="Title" />
+                                <TableColumn fx:id="incomingDate" minWidth="0.0" prefWidth="91.19993591308594" text="Incoming date" />
+                                <TableColumn fx:id="serialNumber" minWidth="30.0" prefWidth="167.99993896484375" text="Serial number" />
+                                <TableColumn fx:id="count" maxWidth="3000.0" minWidth="1.0" prefWidth="184.00006103515625" text="Count" />
+                                <TableColumn fx:id="condition" minWidth="0.0" prefWidth="109.5999755859375" text="Condition" />
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -28,36 +93,8 @@
                         </TableView>
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="142.0" prefWidth="998.0" styleClass="background-lower">
-                    <children>
-                        <HBox layoutX="590.0" layoutY="-5.0" prefHeight="90.0" prefWidth="934.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="0.0">
-                            <children>
-                                <Button fx:id="search" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleSearchProduct" prefHeight="25.0" prefWidth="87.0" text="Search">
-                                    <HBox.margin>
-                                        <Insets left="20.0" top="20.0" />
-                                    </HBox.margin>
-                                </Button>
-                                <Button fx:id="add" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleNewProduct" prefWidth="80.0" text="Add">
-                                    <HBox.margin>
-                                        <Insets left="20.0" top="20.0" />
-                                    </HBox.margin>
-                                </Button>
-                                <Button fx:id="update" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleEditProduct" prefWidth="111.0" text="Update">
-                                    <HBox.margin>
-                                        <Insets left="20.0" top="20.0" />
-                                    </HBox.margin>
-                                </Button>
-                                <Button fx:id="remove" contentDisplay="RIGHT" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#remove" prefWidth="80.0" text="Delete" textAlignment="CENTER">
-                                    <HBox.margin>
-                                        <Insets left="20.0" top="20.0" />
-                                    </HBox.margin>
-                                </Button>
-                            </children>
-                        </HBox>
-                    </children>
-                </AnchorPane>
-            </items>
-        </SplitPane>
+         </items>
+      </SplitPane>
     </children>
 
 </AnchorPane>
