--- a/shop_1/src/main/resources/view/dialog_window/NewShopOverview.fxml
+++ b/shop_1/src/main/resources/view/dialog_window/NewShopOverview.fxml
@@ -10,39 +10,34 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane onKeyPressed="#close" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="170.0" prefWidth="385.0" stylesheets="@../../css/DarkTheme.css"
-            xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.bespalov.shop.controller.NewShopController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#close" prefHeight="170.0" prefWidth="385.0" styleClass="background" stylesheets="@../../css/DialogTheme.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bespalov.shop.controller.NewShopController">
     <children>
         <GridPane layoutX="14.0" layoutY="14.0" prefHeight="157.0" prefWidth="342.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.60003662109375" minWidth="10.0" prefWidth="155.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="10.0" prefWidth="187.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.60003662109375" minWidth="10.0" prefWidth="155.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="10.0" prefWidth="187.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <Label fx:id="address" text="Address:">
                     <font>
-                        <Font name="Georgia Italic" size="14.0"/>
+                        <Font name="Georgia Italic" size="14.0" />
                     </font>
                 </Label>
                 <Label fx:id="titleShop" text="Title shop:" GridPane.rowIndex="1">
                     <font>
-                        <Font name="Georgia Italic" size="14.0"/>
+                        <Font name="Georgia Italic" size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="addressField" GridPane.columnIndex="1"/>
-                <TextField fx:id="titleShopField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <Button fx:id="buttonOk" onAction="#pressOk" mnemonicParsing="false" prefHeight="26.0" prefWidth="58.0"
-                        text="Ok" textFill="#fff3f3" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <TextField fx:id="addressField" GridPane.columnIndex="1" />
+                <TextField fx:id="titleShopField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button fx:id="buttonOk" mnemonicParsing="false" onAction="#pressOk" prefHeight="26.0" prefWidth="58.0" text="Ok" textFill="#fff3f3" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <GridPane.margin>
-                        <Insets left="120.0"/>
+                        <Insets left="120.0" />
                     </GridPane.margin>
                 </Button>
             </children>
